Initial Java 13 updates (#185)
* Initial Java 13 updates

* Fix Github action